# sushiro-overdose

./: .gitignore  .goreleaser.yml  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  activity.go  api.go  auth_probe.go  auth_probe_test.go  booking.go  booking_strategy_test.go  calendar.go  cert.go  config.go  config.json  daemon.go  diag_bundle.go  diagnostics.go  diagnostics_test.go  engine.go  engine_sniper.go  go.mod  health.go  history.go  insights.go  insights_test.go  install.bat  install.ps1  main.go  maintenance.go  maintenance_test.go  monitor.go  netticket.go  notifier.go  notifier_bark.go  notifier_feishu.go  notifier_serverchan.go  (+52 more)
collector/: .env.example  AGENTS.md  README.md  collector.service  config.example.json  package.json  requirements.txt  wrangler.toml
docs/: cloudflare-github-turso.md  design-system-routine-handoff.md  product-gaps-v3.13-plan.md  redesign-v3.5-plan.md  release-checklist-2.15.0.md  release-checklist-2.16.0.md  release-notes-2.15.0.md  release-notes-2.16.0.md  release-notes-2.17.0.md  release-notes-2.18.0.md  release-notes-2.19.0.md  release-notes-2.19.1.md  release-notes-2.20.0.md  release-notes-2.21.0.md  release-notes-2.21.1.md  release-notes-2.21.2.md  release-notes-2.21.3.md  release-notes-2.21.4.md  release-notes-2.22.0.md  release-notes-2.22.1.md  release-notes-2.23.0.md  (+37 more)
install/: install.sh  (+1 more)
mcp/: .env.example  README.md  pyproject.toml
mcp/docs/: faq.md
mcp/mcp_server/: __init__.py  config.py  desktop.py  resources.py  server.py  tools_advice.py  tools_desktop.py  tools_queue.py  turso.py
(+204 files in other folders)
